src/components/posts/Post.css
.block {
    position: relative;

    margin-top: 50px;

    /*width: auto;*/
    /*min-width: 400px;*/

    /*width: 800px;*/
    max-width: 800px;
    min-width: 800px;

    /*height: 250px;*/

    background-color: white;


    z-index: 1;

    /*border-radius: 2px;*/
    overflow: hidden;

    cursor: pointer;

    transition: min-width 1s, margin-top 1s, width 1s;

    /*box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);*/
    /*transition: box-shadow 5s ease-in-out;*/
}

.block.edit {
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    transition: min-height 1s, min-width 1s, margin-top 1s, width 1s, box-shadow 1s;

    min-width: 800px;
    min-height: 0;

    cursor: auto;
}

.block.edit:hover {
    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
}

.block.new {

    width: auto !important;
    min-width: 100px !important;
    min-height: 100px;

    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);

    margin-top: 0;

    transition: min-height 1s, min-width 1s, margin-top 1s, width 1s, box-shadow 1s;
    cursor: pointer;
}

.block.new:hover {
    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
}

[contenteditable]:focus {
    outline: 0 solid transparent;
}

.id {
    /*font-size: 8px;*/
    color: lightgray;
    padding-bottom: 10px;
}

.title {
    /*font-weight: 600;*/
    padding: 20px;
    /*padding-bottom: 20px;*/
}

.text {
    /*padding-left: 20px;*/
    /*padding-bottom: 20px;*/
    padding: 20px;
    line-height: 20px;
    /*background-color: rgba(91, 211, 177, 0.1);*/
}

.images {
    display: flex;
    /*flex-direction: row;*/
    /*align-content: space-between;*/
}

.image {
    max-width: 300px;
    max-height: 150px;
    display: block;
}

.CodeMirror {
    height: auto !important;
    min-height: 100px !important;
}

.CodeMirror-lines {
    /*padding: 15px 0 !important;*/
}

.categories {
    background-color: rgba(0, 0, 0, 0.8) !important;
    color: white;
}

.new {
    max-width: none !important;
}

